--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,27 @@
 <html>
     <head>
+        <meta charset="UTF-8">
+        <link rel="icon" href="static/favicon.png" sizes="16x16">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <script src="bundle.js"></script>
+        <link rel="stylesheet" href="style.css">
         <title>The House</title>
     </head>
     <body>
         <header>
-            <div>
-                <img src="" alt="logo">
-            </div>
-            <nav>
+            <img src="static/logo.png" alt="logo" class="logo">
+            <nav class="nav-bar">
                 <a href="#experience">Experiencia The House</a>
                 <a href="#rooms">Habitaciones</a>
                 <a href="#how">¿Cómo funciona?</a>
                 <a href="#services">Servicios</a>
-                <a href="#booking">Reservar</a>
+                <a href="#contact"><button type="button" class="btn btn--primary">Apply</button></a>
             </nav>
         </header>
         <div>
             <section id="experience">
                 <div>
-                    <div>Una experiencia de Coliving única</div>
+                    <h2>Una experiencia de Coliving única</h2>
                     <div>
                         <p>Primera casa para <b>emprendedores</b> en Madrid, elige el tiempo que vas a estar, mira quien vive ahora y reserva tu habitación.</p>
                         <p>Aprovecha la oportunidad para conocer gente con la que compartes inquietudes.</p>
@@ -27,46 +29,61 @@
                     <img src="" alt="houser-experience">
                 </div>
                 <div>
-                    <span>Experiencia The House</span>
-
+                    <h3>Experiencia The House</h3>
+                    <p>Todas las personas que entran en The House son seleccionadas para conseguir algo único. Solo podrás entrar durante 1 año.</p>
                 </div>
             </section>
             <section id="rooms">
-                    <span>Habitacioness</span>
-                    <ul>
-                        <li>r1</li>
-                        <li>r2</li>
-                        <li>r3</li>
-                    </ul>
+                <h3>Habitacioness</h3>
+                <ul>
+                    <li>r1</li>
+                    <li>r2</li>
+                    <li>r3</li>
+                </ul>
             </section>
             <section id="how">
-                <span>¿Cómo funciona?</span>
-                <ul>
+                <h3>¿Cómo funciona?</h3>
+                <ol>
                     <li>Elige tu habitación y reserva una visita para conocer en persona a los que ya viven en The House</li>
                     <li>Presenta tu idea de negocio al comité de The House para que aceptemos tu candidatura.</li>
                     <li>Empieza a vivir la experiencia más aceleradora de tu vida</li>
-                </ul>
+                </ol>
             </section>
             <section id="services">
-                    <span>Servicios</span>
-                    <ul>
-                        <li>
-                            <span><span>icon</span>Networking</span>
-                            <p>Conoce a gente del entorno The House con las que crear nuevas cosas. </p>
-                        </li>
-                        <li>
-                            <span><span>icon</span>Mentoring</span>
-                            <p>Tendrás acceso a una red de mentores que te ayudarán a llevar tu proyecto al siguiente nivel.</p>
-                        </li>
-                        <li>
-                            <span><span>icon</span>Mantenimiento</span>
-                            <p>Nosotros nos encargamos de la limpieza, reparaciones y todas esas perdidas de tiempo. ¡Céntrate en tu negocio!</p>
-                        </li>
-                        <li>
-                            <span><span>icon</span>Wifi y mucho más</span>
-                            <p>Wifi, espacios de trabajo, lavandería, cocina, calefacción… Todo incluido</p>
-                        </li>
-                    </ul>
+                <h3>Servicios</h3>
+                <ul>
+                    <li>
+                        <span><span>icon</span>Networking</span>
+                        <p>Conoce a gente del entorno The House con las que crear nuevas cosas. </p>
+                    </li>
+                    <li>
+                        <span><span>icon</span>Mentoring</span>
+                        <p>Tendrás acceso a una red de mentores que te ayudarán a llevar tu proyecto al siguiente nivel.</p>
+                    </li>
+                    <li>
+                        <span><span>icon</span>Mantenimiento</span>
+                        <p>Nosotros nos encargamos de la limpieza, reparaciones y todas esas perdidas de tiempo. ¡Céntrate en tu negocio!</p>
+                    </li>
+                    <li>
+                        <span><span>icon</span>Wifi y mucho más</span>
+                        <p>Wifi, espacios de trabajo, lavandería, cocina, calefacción… Todo incluido</p>
+                    </li>
+                </ul>
+            </section>
+            <section id="contact">
+                <h3>Contacto</h3>
+                <p>Déjanos tus datos para que estudiemos tu candidatura a The House</p>
+                <div>
+                    <div>
+                        <label for="email">Correo electrónico</label>
+                        <input name="email" type="email">
+                    </div>
+                    <div>
+                        <label for="comment">Cuéntanos tu historia</label>
+                        <textarea name="comment" cols="30" rows="10"></textarea>
+                    </div>
+                </div>
+                <button type="button" class="btn btn--secondary">Enviar</button>
             </section>
         </div>
     </body>
