--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
         <meta charset="UTF-8">
         <link rel="icon" href="static/favicon.png" sizes="16x16">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-        <script src="bundle.js"></script>
+        <script src="index.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>The House</title>
