--- a/src/index.html
+++ b/src/index.html
@@ -58,24 +58,32 @@
             </section>
             <section id="services" class="section">
                 <span class="section__title section__title--centered">¿Qué vas a conseguir?</span>
-                <ul>
-                    <li>
-                        <span><span>icon</span>Networking</span>
-                        <p>Conoce a gente del entorno The House con las que crear nuevas cosas. </p>
-                    </li>
-                    <li>
-                        <span><span>icon</span>Mentoring</span>
-                        <p>Tendrás acceso a una red de mentores que te ayudarán a llevar tu proyecto al siguiente nivel.</p>
-                    </li>
-                    <li>
-                        <span><span>icon</span>Mantenimiento</span>
-                        <p>Nosotros nos encargamos de la limpieza, reparaciones y todas esas perdidas de tiempo. ¡Céntrate en tu negocio!</p>
-                    </li>
-                    <li>
-                        <span><span>icon</span>Wifi y mucho más</span>
-                        <p>Wifi, espacios de trabajo, lavandería, cocina, calefacción… Todo incluido</p>
-                    </li>
-                </ul>
+                <div class="services__list">
+                    <div class="service__row">
+                        <div class="service">
+                            <img class="service__icon" src="static/networking-icon.svg" alt="networking">
+                            <span class="service__name">Networking</span>
+                            <p>Conoce a gente del entorno The House con las que crear nuevas cosas. </p>
+                        </div>
+                        <div class="service">
+                            <img class="service__icon" src="static/Mentoring-icon.svg" alt="Mentoring">
+                            <span class="service__name">Mentoring</span>
+                            <p>Tendrás acceso a una red de mentores que te ayudarán a llevar tu proyecto al siguiente nivel.</p>
+                        </div>
+                    </div>
+                    <div class="service__row">
+                        <div class="service">
+                            <img class="service__icon" src="static/mainteinance-icon.svg" alt="mainteinance">
+                            <span class="service__name">Mantenimiento</span>
+                            <p>Nosotros nos encargamos de la limpieza, reparaciones y todas esas perdidas de tiempo. ¡Céntrate en tu negocio!</p>
+                        </div>
+                        <div class="service">
+                            <img class="service__icon" src="static/wifi-icon.svg" alt="wifi">
+                            <span class="service__name">Wifi y mucho más</span>
+                            <p>Wifi, espacios de trabajo, lavandería, cocina, calefacción… Todo incluido</p>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section id="oldhousers" class="section">
                 <span class="section__title section__title--centered">Antiguos housers</span>
