Added eshousers section

--- a/src/index.html
+++ b/src/index.html
@@ -87,20 +87,26 @@
             </section>
             <section id="oldhousers" class="section">
                 <span class="section__title section__title--centered">Antiguos housers</span>
-                <span>
-                    <img src="static/exhouser1.png" alt="exhouser">
-                    <p>En The House conocí a mi socio y CTO. Entonces eramos 2 y en 3 años hemos crecido hasta 24 personas.</p>
-                    <p>Alex Pinchuk - CEO en SkyGate</p>
+                <span class="oldhouser">
+                    <div class="oldhouser__wrapper">
+                        <img class="oldhouser__image" src="static/exhouser1.png" alt="exhouser">
+                        <p>En The House conocí a mi socio y CTO. Entonces eramos 2 y en 3 años hemos crecido hasta 24 personas.</p>
+                    </div>
+                    <p class="oldhouser__name">Alex Pinchuk - CEO en SkyGate</p>
                 </span>
-                <span>
-                    <img src="static/exhouser2.png" alt="exhouser">
-                    <p>Con el apoyo que te dan y la gente que conoces puedes crear algo muy grande.</p>
-                    <p>John Sculter - CTO en MaxiFilmes</p>
+                <span class="oldhouser">
+                    <div class="oldhouser__wrapper">
+                        <img class="oldhouser__image" src="static/exhouser2.png" alt="exhouser">
+                        <p>Con el apoyo que te dan y la gente que conoces puedes crear algo muy grande.</p>
+                    </div>
+                    <p class="oldhouser__name">John Sculter - CTO en MaxiFilmes</p>
                 </span>
-                <span>
-                    <img src="static/exhouser3.png" alt="exhouser">
-                    <p>The House te ayuda en el momento que más lo necesitas, cuando empiezas.</p>
-                    <p>Macaulay Culkin - CPO en DragsMenu</p>
+                <span class="oldhouser"> 
+                    <div class="oldhouser__wrapper">
+                        <img class="oldhouser__image" src="static/exhouser3.png" alt="exhouser">
+                        <p>The House te ayuda en el momento que más lo necesitas, cuando empiezas.</p>
+                    </div>
+                    <p class="oldhouser__name">Macaulay Culkin - CPO en DragsMenu</p>
                 </span>
             </section>
             <section id="contact" class="contact section--full">
@@ -117,6 +123,9 @@
                     </div>
                 </div>
                 <button type="button" class="btn btn--secondary">Enviar</button>
+            </section>
+            <section id="social">
+
             </section>
         </div>
     </body>
