Added social networks footer

--- a/src/index.html
+++ b/src/index.html
@@ -90,23 +90,23 @@
                 <span class="oldhouser">
                     <div class="oldhouser__wrapper">
                         <img class="oldhouser__image" src="static/exhouser1.png" alt="exhouser">
-                        <p>En The House conocí a mi socio y CTO. Entonces eramos 2 y en 3 años hemos crecido hasta 24 personas.</p>
+                        <p class="italic">"En The House conocí a mi socio y CTO. Entonces eramos 2 y en 3 años hemos crecido hasta 24 personas."</p>
                     </div>
-                    <p class="oldhouser__name">Alex Pinchuk - CEO en SkyGate</p>
+                    <p class="oldhouser__name">Alex Pinchuk - CEO @ SkyGate</p>
                 </span>
                 <span class="oldhouser">
                     <div class="oldhouser__wrapper">
                         <img class="oldhouser__image" src="static/exhouser2.png" alt="exhouser">
-                        <p>Con el apoyo que te dan y la gente que conoces puedes crear algo muy grande.</p>
+                        <p class="italic">"Con el apoyo que te dan y la gente que conoces puedes crear algo muy grande."</p>
                     </div>
-                    <p class="oldhouser__name">John Sculter - CTO en MaxiFilmes</p>
+                    <p class="oldhouser__name">María - CEO @ Blockchain app</p>
                 </span>
                 <span class="oldhouser"> 
                     <div class="oldhouser__wrapper">
                         <img class="oldhouser__image" src="static/exhouser3.png" alt="exhouser">
-                        <p>The House te ayuda en el momento que más lo necesitas, cuando empiezas.</p>
+                        <p class="italic">"The House te ayuda en el momento que más lo necesitas, cuando empiezas."</p>
                     </div>
-                    <p class="oldhouser__name">Macaulay Culkin - CPO en DragsMenu</p>
+                    <p class="oldhouser__name">Martin - Product Development @ Google</p>
                 </span>
             </section>
             <section id="contact" class="contact section--full">
@@ -124,8 +124,24 @@
                 </div>
                 <button type="button" class="btn btn--secondary">Enviar</button>
             </section>
-            <section id="social">
-
+            <section id="social" class="section">
+                <div class="social__list">
+                    <span class="social__item">
+                        <a href="https://twitter.com/hi_thehouse">
+                            <img src="static/twitter.png" alt="twitter">
+                        </a>
+                    </span>
+                    <span class="social__item">
+                        <a href="#">
+                            <img src="static/facebook.png" alt="facebook">
+                        </a>
+                    </span>
+                    <span class="social__item">
+                        <a href="https://www.instagram.com/hi.thehouse/?hl=es">
+                            <img src="static/instagram.png" alt="instagram">
+                        </a>
+                    </span>
+                </div>
             </section>
         </div>
     </body>
