--- a/src/index.html
+++ b/src/index.html
@@ -109,20 +109,26 @@
                     <p class="oldhouser__name">Martin - Product Development @ Google</p>
                 </span>
             </section>
-            <section id="contact" class="contact section--full">
+            <section id="contact" class="section section--full contact">
                 <span class="section__title section__title--secondary section__title--centered">Contacto</span>
-                <p>Déjanos tus datos para que estudiemos tu candidatura a The House</p>
-                <div>
-                    <div>
-                        <label for="email">Correo electrónico</label>
-                        <input name="email" type="email">
+                <div class="contact__form">
+                    <p>Déjanos tus datos para que estudiemos tu candidatura a The House</p>
+                    <div class="contact__form__item">
+                        <div>* Correo electrónico</div>
+                        <input name="email" type="email" placeholder="my@email.com">
                     </div>
-                    <div>
-                        <label for="comment">Cuéntanos tu historia</label>
-                        <textarea name="comment" cols="30" rows="10"></textarea>
+                    <div class="contact__form__item">
+                        <div>LinkedIn Url</div>
+                        <input name="linkedin" type="url" placeholder="linkedin.com/in/username">
+                    </div>
+                    <div class="contact__form__item">
+                        <div for="comment">Cuéntanos tu historia</div>
+                        <textarea name="comment" cols="30" rows="10" placeholder="Háblanos de ti..."></textarea>
+                    </div>
+                    <div class="contact__form__item contact__form__item--centered">
+                        <button type="button" class="btn btn--secondary">Enviar</button>
                     </div>
                 </div>
-                <button type="button" class="btn btn--secondary">Enviar</button>
             </section>
             <section id="social" class="section">
                 <div class="social__list">
