JS contact functions

--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
                     <p>Déjanos tus datos para que estudiemos tu candidatura a The House</p>
                     <div class="contact__form__item">
                         <div>* Correo electrónico</div>
-                        <input name="email" type="email" placeholder="my@email.com">
+                        <input id="email" name="email" type="email" placeholder="my@email.com">
                     </div>
                     <div class="contact__form__item">
                         <div>LinkedIn Url</div>
