--- a/src/index.html
+++ b/src/index.html
@@ -112,26 +112,17 @@
             <section id="contact" class="section section--full contact">
                 <div class="contact__form">
                     <span class="section__title section__title--secondary section__title--centered">Contacto</span>
-                    <p>Déjanos tus datos para que estudiemos tu candidatura a The House</p>
-                    <div class="contact__form__item">
-                        <div>* Correo electrónico</div>
-                        <input id="email" name="email" type="email" placeholder="my@email.com">
-                    </div>
-                    <div class="contact__form__item">
-                        <div>LinkedIn Url</div>
-                        <input name="linkedin" type="url" placeholder="linkedin.com/in/username">
-                    </div>
-                    <div class="contact__form__item">
-                        <div for="comment">Cuéntanos tu historia</div>
-                        <textarea name="comment" cols="30" rows="5" placeholder="Háblanos de ti..."></textarea>
-                    </div>
-                    <div class="contact__form__item contact__form__item--centered">
-                        <button id="submit" class="btn btn--secondary">Enviar</button>
-                    </div>
+                    <p>Mándanos un email con tus datos para que estudiemos tu candidatura a The House:</p>
+                    <p class="contact__email">hi.thehouse@gmail.com</p>
                 </div>
             </section>
             <section id="social" class="section">
                 <div class="social__list">
+                    <span class="social__item">
+                        <a href='mailto:"mailto:hi.thehouse@gmail.com"'>
+                            <img src="static/email.png" alt="email">
+                        </a>
+                        </span>
                     <span class="social__item">
                         <a href="https://twitter.com/hi_thehouse">
                             <img src="static/twitter.png" alt="twitter">
