--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                             <p>Conoce a gente del entorno The House con las que crear nuevas cosas. </p>
                         </div>
                         <div class="service">
-                            <img class="service__icon" src="static/Mentoring-icon.svg" alt="Mentoring">
+                            <img class="service__icon" src="static/mentoring-icon.svg" alt="Mentoring">
                             <span class="service__name">Mentoring</span>
                             <p>Tendrás acceso a una red de mentores que te ayudarán a llevar tu proyecto al siguiente nivel.</p>
                         </div>
